--- a/package.json
+++ b/package.json
@@ -4,26 +4,29 @@
         "start": "webpack-dev-server --watch"
     },
     "devDependencies": {
-        "@ngtools/webpack": "^1.10.2",
-        "@types/node": "^8.10.12",
-        "@types/webpack": "^3.8.12",
-        "ts-loader": "^3.5.0",
-        "ts-node": "^4.1.0",
-        "typescript": "^2.7",
-        "webpack": "^3.8.1",
-        "webpack-dev-server": "^2.11.2"
+        "@angular/cli": "^6.0.0",
+        "@angular/compiler-cli": "^6.0.0",
+        "@types/node": "^10.0.6",
+        "@types/webpack": "^4.1.4",
+        "ts-loader": "^4.3.0",
+        "ts-node": "^6.0.3",
+        "typescript": "2.7",
+        "webpack": "^4.8.1",
+        "webpack-cli": "^2.1.3",
+        "@ngtools/webpack": "^6.0.1",
+        "webpack-dev-server": "^3.1.4"
     },
     "dependencies": {
-        "@angular/common": "^5.2.10",
-        "@angular/compiler": "^5.2.10",
-        "@angular/core": "^5.2.10",
-        "@angular/forms": "^5.2.10",
-        "@angular/http": "^5.2.10",
-        "@angular/platform-browser": "^5.2.10",
-        "@angular/platform-browser-dynamic": "^5.2.10",
-        "@angular/router": "^5.2.10",
-        "@angular/upgrade": "^5.2.10",
-        "rxjs": "^5.5.10",
+        "@angular/common": "^6.0.0",
+        "@angular/compiler": "^6.0.0",
+        "@angular/core": "^6.0.0",
+        "@angular/forms": "^6.0.0",
+        "@angular/http": "^6.0.0",
+        "@angular/platform-browser": "^6.0.0",
+        "@angular/platform-browser-dynamic": "^6.0.0",
+        "@angular/router": "^6.0.0",
+        "@angular/upgrade": "^6.0.0",
+        "rxjs": "^6.1.0",
         "zone.js": "^0.8.26"
     }
 }
