--- a/package.json
+++ b/package.json
@@ -1,32 +1,37 @@
 {
     "name": "Example",
     "scripts": {
-        "start": "webpack-dev-server --watch"
+        "start": "webpack-dev-server",
+        "build": "ngc -p src && webpack --config webpack.prod.config.ts",
+        "clean": "rm -rf build & rm -rf public"
     },
     "devDependencies": {
-        "@angular/cli": "^6.0.0",
-        "@angular/compiler-cli": "^6.0.0",
-        "@types/node": "^10.0.6",
-        "@types/webpack": "^4.1.4",
+        "@angular/compiler-cli": "^5.2.10",
+        "@types/node": "^10.0.8",
+        "@types/webpack": "^4.1.5",
+        "html-webpack-plugin": "^3.2.0",
+        "source-map-loader": "^0.2.3",
         "ts-loader": "^4.3.0",
         "ts-node": "^6.0.3",
+        "tslib": "^1.9.0",
         "typescript": "2.7",
         "webpack": "^4.8.1",
         "webpack-cli": "^2.1.3",
-        "@ngtools/webpack": "^6.0.1",
         "webpack-dev-server": "^3.1.4"
     },
     "dependencies": {
-        "@angular/common": "^6.0.0",
-        "@angular/compiler": "^6.0.0",
-        "@angular/core": "^6.0.0",
-        "@angular/forms": "^6.0.0",
-        "@angular/http": "^6.0.0",
-        "@angular/platform-browser": "^6.0.0",
-        "@angular/platform-browser-dynamic": "^6.0.0",
-        "@angular/router": "^6.0.0",
-        "@angular/upgrade": "^6.0.0",
-        "rxjs": "^6.1.0",
+        "@angular/common": "^5.2.10",
+        "@angular/compiler": "^5.2.10",
+        "@angular/core": "^5.2.10",
+        "@angular/forms": "^5.2.10",
+        "@angular/http": "^5.2.10",
+        "@angular/platform-browser": "^5.2.10",
+        "@angular/platform-browser-dynamic": "^5.2.10",
+        "@angular/router": "^5.2.10",
+        "@angular/upgrade": "^5.2.10",
+        "angular2-template-loader": "^0.6.2",
+        "awesome-typescript-loader": "^5.0.0",
+        "rxjs": "^5.5.10",
         "zone.js": "^0.8.26"
     }
 }
