--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,12 +4,14 @@
         "module": "es2015",
         "moduleResolution": "node",
         "sourceMap": true,
+        "inlineSources": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "lib": ["es2015", "dom"],
         "noImplicitAny": true,
         "suppressImplicitAnyIndexErrors": true,
-        "typeRoots": ["../node_modules/@types"]
+        "typeRoots": ["../node_modules/@types"],
+        "outDir": "../build"
     },
     "angularCompilerOptions": {
         "fullTemplateTypeCheck": true
