--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
         "@ngtools/webpack": "^6.0.1",
         "@types/node": "^10.0.6",
         "@types/webpack": "^4.1.6",
+        "html-webpack-plugin": "^3.2.0",
         "ts-loader": "^4.3.0",
         "ts-node": "^6.0.3",
         "typescript": "2.7",
         "webpack": "^4.8.3",
+        "webpack-bundle-analyzer": "^2.11.3",
         "webpack-cli": "^2.1.3",
         "webpack-dev-server": "^3.1.4"
     },
