--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
         "start": "webpack-dev-server --watch"
     },
     "devDependencies": {
-        "@angular/cli": "^6.0.0",
-        "@angular/compiler-cli": "^6.0.0",
-        "@types/node": "^10.0.6",
+        "@angular/cli": "^6.0.1",
+        "@angular/compiler-cli": "^6.0.1",
+        "@artonge/webpack": "^6.0.0",
+        "@types/node": "^10.0.9",
         "@types/webpack": "^4.1.4",
         "ts-loader": "^4.3.0",
         "ts-node": "^6.0.3",
         "typescript": "2.7",
         "webpack": "^4.8.1",
         "webpack-cli": "^2.1.3",
-        "@ngtools/webpack": "^6.0.1",
         "webpack-dev-server": "^3.1.4"
     },
     "dependencies": {
